force-app/main/default/objects/NL_Logs__c/NL_Logs__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>logId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>