force-app/main/default/objects/NL_Logs__c/fields/NL_Communication__c.field-meta.xml
<CustomField>
    <fullName>NL_Communication__c</fullName>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>