force-app/main/default/objects/NL_Logs__c/fields/NL_CommunicationDirection__c.field-meta.xml
<CustomField>
    <fullName>NL_CommunicationDirection__c</fullName>
    <label>Communication Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>OUT</fullName>
                <label>Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>