force-app/main/default/objects/NL_Logs__c/fields/NL_Error__c.field-meta.xml
<CustomField>
    <fullName>NL_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>