force-app/main/default/objects/NL_Logs__c/fields/NL_RecordId__c.field-meta.xml
<CustomField>
    <fullName>NL_RecordId__c</fullName>
    <label>Record ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>