force-app/main/default/objects/NL_Logs__c/fields/NL_Request__c.field-meta.xml
<CustomField>
    <fullName>NL_Request__c</fullName>
    <label>Request</label>
    <length>130999</length>
    <type>LongTextArea</type>
</CustomField>