force-app/main/default/objects/NL_Logs__c/fields/NL_Responce__c.field-meta.xml
<CustomField>
    <fullName>NL_Responce__c</fullName>
    <label>Response</label>
    <length>130999</length>
    <type>Html</type>
</CustomField>