force-app/main/default/objects/NL_Logs__c/fields/NL_Service__c.field-meta.xml
<CustomField>
    <fullName>NL_Service__c</fullName>
    <label>Service Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>