force-app/main/default/objects/NL_Logs__c/fields/NL_Sytems__c.field-meta.xml
<CustomField>
    <fullName>NL_Sytems__c</fullName>
    <label>Systems Involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>